css/radios.css
/*
 Hide the original radios and checkboxes
 (but still accessible)

 :not(#foo) > is a rule filter to block browsers
 that don't support that selector from
 applying rules they shouldn't

 */
input[type='radio'], input[type='checkbox'] {

	/* Hide the input, but have it still be clickable */
	opacity: 0;
	float: left;
	width: 18px;
}

input[type='radio'] + label, [type='checkbox'] + label {
	margin: 0;
	clear: none;
	/* Left padding makes room for image */
	padding: 5px 0 4px 24px;
	/* Make look clickable because they are */
	cursor: pointer;
	background: url('../img/off.png') left center no-repeat;
}

/*
 Change from unchecked to checked graphic
 */
input[type='radio']:checked + label {
	background-image: url('../img/radio.png');
}
input[type='checkbox']:checked + label {
	background-image: url('../img/check.png');
}

